<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0" stdsetdef="1">
  <resources><include location="../../../res/extui/extui.qrc"/></resources><author></author>
  <comment></comment>
  <exportmacro></exportmacro>
  <class>QG_RoundOptions</class>
  <widget class="QWidget" name="QG_RoundOptions">
    <property name="geometry">
      <rect>
        <x>0</x>
        <y>0</y>
        <width>200</width>
        <height>24</height>
      </rect>
    </property>
    <property name="sizePolicy">
      <sizepolicy>
        <hsizetype>0</hsizetype>
        <vsizetype>0</vsizetype>
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
      </sizepolicy>
    </property>
    <property name="minimumSize">
      <size>
        <width>170</width>
        <height>22</height>
      </size>
    </property>
    <property name="maximumSize">
      <size>
        <width>200</width>
        <height>32767</height>
      </size>
    </property>
    <property name="windowTitle">
      <string>Round Options</string>
    </property>
    <property name="toolTip" stdset="0">
      <string/>
    </property>
    <layout class="QHBoxLayout">
      <property name="margin">
        <number>1</number>
      </property>
      <item>
        <widget class="QCheckBox" name="cbTrim">
          <property name="text">
            <string>Trim</string>
          </property>
          <property name="toolTip" stdset="0">
            <string>Check to trim both edges to the rounding</string>
          </property>
        </widget>
      </item>
      <item>
        <widget class="Line" name="sep1_2">
          <property name="sizePolicy">
            <sizepolicy>
              <hsizetype>0</hsizetype>
              <vsizetype>1</vsizetype>
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
            </sizepolicy>
          </property>
          <property name="frameShape">
            <enum>QFrame::VLine</enum>
          </property>
          <property name="frameShadow">
            <enum>QFrame::Sunken</enum>
          </property>
        </widget>
      </item>
      <item>
        <widget class="QLabel" name="lRadius">
          <property name="text">
            <string>Radius:</string>
          </property>
          <property name="wordWrap">
            <bool>false</bool>
          </property>
        </widget>
      </item>
      <item>
        <widget class="QLineEdit" name="leRadius"/>
      </item>
      <item>
        <widget class="Line" name="sep1">
          <property name="sizePolicy">
            <sizepolicy>
              <hsizetype>0</hsizetype>
              <vsizetype>1</vsizetype>
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
            </sizepolicy>
          </property>
          <property name="frameShape">
            <enum>QFrame::VLine</enum>
          </property>
          <property name="frameShadow">
            <enum>QFrame::Sunken</enum>
          </property>
        </widget>
      </item>
    </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <connections>
    <connection>
      <sender>leRadius</sender>
      <signal>textChanged(QString)</signal>
      <receiver>QG_RoundOptions</receiver>
      <slot>updateData()</slot>
    </connection>
    <connection>
      <sender>cbTrim</sender>
      <signal>toggled(bool)</signal>
      <receiver>QG_RoundOptions</receiver>
      <slot>updateData()</slot>
    </connection>
  </connections>
</ui>
